# dtutils

./: .npmrc  package.json
.github/workflows/: astro.yml  github.yml  npm.yml  test.yml
npm/: .gitignore  README.md  package.json  tsconfig.json
npm/src/: cli.ts  index.ts
npm/src/utilities/: formatColor.ts  randomInt.ts
python/: LICENSE.txt  pyproject.toml
python/dtutils/: __init__.py  getInput.py
python/dtutils_dimitristerzz.egg-info/: PKG-INFO  SOURCES.txt
web/: astro.config.mjs
web/src/: global.css  layout.astro
web/src/pages/: index.astro
